--- a/{{ cookiecutter.project_slug }}/package.json
+++ b/{{ cookiecutter.project_slug }}/package.json
@@ -1,13 +1,15 @@
 {
+
     "name": "{{ cookiecutter.project_slug }}",
     "version": "0.0.1",
     "private": {{ cookiecutter.private | lower }},
-    "description": "{{ cookiecutter.description }}",
+    "private": true,
+    "description": "{{ cookiecutter.description}}",
     "type": "module",
     "engines": {
         "node": ">=22"
     },
-    "author": "{{ cookiecutter.author }}",
+    "author": "bn-l",
     "scripts": {
         "dev": "vite dev",
         "build": "vite build",
@@ -30,13 +32,7 @@
         "@sveltejs/package": "^2.0.0",
         "@sveltejs/vite-plugin-svelte": "^3.0.0",
         "@types/eslint": "^9.6.0",
-        "publint": "^0.2.0",
-        "svelte": "^4.2.7",
-        "svelte-check": "^3.6.0",
-        "typescript": "^5.0.0",
-        "vite": "^5.0.11",
-        "vitest": "^2.0.0",
-        "tsx": "^4.19.0",
+        "autoprefixer": "^10.4.20",
         "bumpp": "^9.5.1",
         "eslint": "^9.8.0",
         "eslint-config-prettier": "^9.1.0",
@@ -45,8 +41,15 @@
         "prettier-plugin-organize-imports": "^4.0.0",
         "prettier-plugin-svelte": "^3.1.2",
         "prettier-plugin-tailwindcss": "^0.6.6",
+        "publint": "^0.2.0",
+        "svelte": "^4.2.7",
+        "svelte-check": "^3.6.0",
+        "tailwindcss": "^3.4.10",
+        "tsx": "^4.19.0",
+        "typescript": "^5.0.0",
         "typescript-eslint": "^8.1.0",
-        "unocss": "^0.62.1"
+        "vite": "^5.0.11",
+        "vitest": "^2.0.0"
     },
     "overrides": {
         "svelte-eslint-parser": "^0.41.0",
