--- a/{{ cookiecutter.project_slug }}/package.json
+++ b/{{ cookiecutter.project_slug }}/package.json
@@ -19,7 +19,7 @@
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
         "lint": "prettier --check . && eslint .",
         "format": "prettier --write .",
-        "test:playwright": "playwright test",
+        "test:integration": "playwright test ./tests/playwright",
         "test:unit": "vitest",
         "bump-version": "npx bumpp"
     },
